# mycommerce

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Commerce.postman_collection.json  DESIGN.md  Dockerfile  LICENSE  Pipfile  README.md  SECURITY.md  TODO.md  docker-compose.dev.yml  docker-compose.yml  duplicates.csv  fixtures.json  init.ipynb  issues.txt  manage.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  products.csv  products_smky8.json  reset.py  reset_project.py  skills-lock.json  test.http  testing.ipynb  testing.js  vetur.config.js
ecommercemcp/: README.md  pyproject.toml  pytest.ini
ecommercemcp/ecommercemcp/: __init__.py  constants.py  main.py  utils.py
ecommercemcp/ecommercemcp/papers/: library.json
ecommercemcp/tests/: test_utils.py
mystore/: .dockerignore  .env.example  .gitignore  Dockerfile  Pipfile  README.md  conftest.py  products.csv  products_smky8.json  pyproject.toml  pytest.toml  reset_project.py
mystore/accounts/: admin.py  choices.py  forms.py  models.py  permissions.py  tasks.py  tests.py  urls.py  views.py
mystore/accounts/api/: serializers.py  urls.py  views.py
mystore/accounts/migrations/: 0001_initial.py  0006_userprofile_source_id_alter_userprofile_stripe_id.py  0007_alter_userprofile_source_id.py
mystore/accounts/tests/: mixins.py  test_accounts_api.py  test_apis.py  test_tasks.py
mystore/adminapi/: README.md  apps.py  permissions.py  serializers.py  urls.py  views.py
mystore/cart/: README.md  admin.py  constants.py  managers.py  models.py  sessions.py  tests.py  urls.py
mystore/cart/api/: serializers.py  urls.py  views.py
mystore/cart/fixtures/: carts.json
mystore/cart/migrations/: 0001_initial.py  0002_alter_cart_session_id.py  0002_remove_cart_cart_cart_price_5994ec_idx_and_more.py  0003_cart_order_reference.py  0004_alter_cart_order_reference.py
mystore/collection/: models.py  schema.py  sitemap.py  tests.py  urls.py  views.py
mystore/collection/api/: serializers.py  urls.py  views.py
mystore/collection/fixtures/: collections.json
mystore/collection/graphql/: schema.py  types.py
mystore/collection/migrations/: 0001_initial.py  0002_alter_collection_category.py  0002_alter_collection_category_and_more.py  0003_alter_collection_category.py  0004_alter_collection_category.py  0005_alter_collection_category.py  0006_alter_collection_category.py  0007_alter_collection_category.py  0008_alter_collection_category.py  0009_alter_collection_category.py  0011_alter_collection_category.py  0013_alter_collection_category.py  0014_alter_collection_category_and_more.py  0015_alter_collection_category.py  0016_alter_collection_category.py  0017_alter_collection_category.py  0018_alter_collection_category.py  0019_alter_collection_category.py  0020_alter_collection_category.py  0021_alter_collection_category_alter_collection_name.py
mystore/collection/templates/: collection.html  collection_subcategory.html  collections.html
mystore/discounts/: models.py
mystore/discounts/api/: serializers.py  urls.py  views.py
mystore/django_ecommerce/: admin.py  apps.py  choices.py  managers.py  models.py  utils.py  validators.py
mystore/django_ecommerce/api/: serializers.py  urls.py  views.py
mystore/django_ecommerce/migrations/: 0001_initial.py  0002_alter_legalbusiness_company_type.py  0003_alter_legalbusiness_company_type.py  0004_alter_legalbusiness_company_type.py  0005_alter_legalbusiness_company_type.py  0006_alter_legalbusiness_company_type.py  0007_alter_legalbusiness_company_type.py  0008_alter_legalbusiness_company_type.py  0009_alter_legalbusiness_company_type.py  0010_alter_legalbusiness_company_type.py
mystore/django_ecommerce_mails/: apps.py  tasks.py  tests.py
mystore/django_ecommerce_mails/fixtures/: users.json
mystore/django_ecommerce_mails/templates/: base_email.html
mystore/fixtures/: products.json
mystore/legal/: sitemap.py
mystore/media/: stock_keeping_units.json
mystore/mystore/: asgi.py  celery_app.py  choices.py  constants.py  mixins.py  responses.py  schema.py  settings.py  sitemaps.py  urls.py  utils.py  views.py  wsgi.py
mystore/mystore/custom_utilities/: tokens.py
mystore/orders/: admin.py  choices.py  models.py  payment.py  tasks.py  tests.py  urls.py  utils.py  views.py
mystore/orders/api/: serializers.py  urls.py  views.py
mystore/orders/fixtures/: orders.json
mystore/orders/migrations/: 0001_initial.py  0002_alter_customerorder_city_alter_customerorder_country.py  0003_alter_customerorder_city_alter_customerorder_country.py  0004_alter_customerorder_city_alter_customerorder_country.py  0004_alter_customerorder_city_alter_customerorder_country_and_more.py  0005_alter_customerorder_city_alter_customerorder_country.py  0006_alter_customerorder_city_alter_customerorder_country.py  0007_alter_customerorder_city_alter_customerorder_country.py  0007_customerorder_notes_alter_customerorder_city_and_more.py  0008_customerorder_completed_and_more.py  0009_alter_customerorder_city_alter_customerorder_country.py  0010_alter_customerorder_city_alter_customerorder_country.py  0013_alter_customerorder_city_alter_customerorder_country.py  0016_alter_customerorder_city_alter_customerorder_country.py  (+5 more)
mystore/reviews/: models.py  utils.py  validators.py
mystore/shipments/: models.py  tasks.py  views.py
mystore/shop/: Dockerfile  admin.py  apps.py  choices.py  forms.py  helpers.py  managers.py  mcp.py  models.py  processors.py  schema.py  sitemap.py  tasks.py  tests.py  urls.py  utils.py  validators.py  views.py
mystore/static/: style.css
mystore/staticfiles/: index.html
mystore/stocks/: README.md  admin.py  models.py  tasks.py  tests.py
mystore/templates/: base.html  base_site.html
mystore/variants/: admin.py  choices.py  mcp.py  models.py  schema.py
services/addresses/: Dockerfile  app.py  pyproject.toml
services/mycart/: .env.example  Dockerfile  README.md  conftest.py  pyproject.toml  pytest.toml
services/myreviews/: conftest.py  manage.py  pyproject.toml  pytest.toml
services/mysubscribers/: conftest.py  manage.py  pyproject.toml  pytest.toml
(+3426 files in other folders)
