[project]
name = "mystore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.62",
    "celery>=5.6.2",
    "coverage>=7.13.4",
    "daphne>=4.2.1",
    "django>=6.0.3",
    "django-axes>=8.3.1",
    "django-celery-beat>=2.9.0",
    "django-ckeditor-5>=0.2.20",
    "django-cors-headers>=4.9.0",
    "django-debug-toolbar>=6.2.0",
    "django-environ>=0.13.0",
    "django-extensions>=4.1",
    "django-filter>=25.2",
    "django-imagekit>=6.1.0",
    "django-import-export>=4.4.0",
    "django-mcp>=0.3.1",
    "django-mcp-server>=0.5.7",
    "django-oauth-toolkit>=3.2.0",
    "django-oauth-toolkit-dcr>=0.1.0",
    "django-redis>=6.0.0",
    "django-storages>=1.14.6",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "factory-boy>=3.3.3",
    "firebase-admin>=7.2.0",
    "flower>=2.0.1",
    "graphene-django>=3.2.3",
    "gunicorn>=25.1.0",
    "httpx>=0.28.1",
    "markdown>=3.10.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "psycopg[binary,pool]>=3.3.3",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.2.2",
    "python-levenshtein>=0.27.3",
    "rapidfuzz>=3.14.3",
    "requests>=2.32.5",
    "stripe>=14.4.0",
    "tablib>=3.9.0",
    "thefuzz>=0.22.1",
    "unidecode>=1.4.0",
]
