[project]
name = "mycart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.63",
    "celery>=5.6.2",
    "channels[daphne]>=4.3.2",
    "coverage>=7.13.4",
    "daphne>=4.2.1",
    "django>=6.0.3",
    "django-celery-beat>=2.9.0",
    "django-ckeditor-5>=0.2.20",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.13.0",
    "django-extensions>=4.1",
    "django-filter>=25.2",
    "django-import-export>=4.4.0",
    "django-mcp>=0.3.1",
    "django-mcp-server>=0.5.7",
    "django-oauth-toolkit>=3.2.0",
    "django-oauth-toolkit-dcr>=0.1.0",
    "django-redis>=6.0.0",
    "django-storages>=1.14.6",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "factory-boy>=3.3.3",
    "firebase-admin>=7.2.0",
    "flower>=2.0.1",
    "graphene-django>=3.2.3",
    "gunicorn>=25.1.0",
    "httpx>=0.28.1",
    "markdown>=3.10.2",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "psycopg[binary,pool]>=3.3.3",
    "pydantic>=2.12.5",
    "pyjwt>=2.11.0",
    "stripe>=14.4.1",
    "twisted[http2,tls]>=25.5.0",
    "unidecode>=1.4.0",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "pytest>=9.0.2",
    "pytest-aio>=2.1.7",
    "pytest-celery>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "pytest-env>=1.6.0",
    "pytest-playwright>=0.7.2",
]

[tool.pyright]
typeCheckingMode = "off"
reportMissingImports = true
reportUntypedBaseClass = true

[tool.pytest_env]
env_files = [".env", ".env.test"]
