[project]
name = "myreviews"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.5",
    "django-celery-beat>=2.9.0",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.13.0",
    "django-extensions>=4.1",
    "django-filter>=25.2",
    "django-import-export>=4.4.0",
    "django-mcp>=0.3.1",
    "django-mcp-server>=0.5.7",
    "django-oauth-toolkit>=3.2.0",
    "django-oauth-toolkit-dcr>=0.1.0",
    "django-redis>=6.0.0",
    "django-storages>=1.14.6",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "factory-boy>=3.3.3",
    "firebase-admin>=7.4.0",
    "gunicorn>=26.0.0",
    "httpx>=0.28.1",
    "psycopg[binary,pool]>=3.3.3",
    "pydantic>=2.12.5",
    "twisted[http2,tls]>=25.5.0",
]

[dependency-groups]
dev = [
    "coverage>=7.14.0",
    "pytest>=9.0.3",
    "pytest-aio>=2.1.7",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "pytest-env>=1.6.0",
]
