[project]
name = "mysubscribers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.2",
    "daphne>=4.2.1",
    "django>=6.0.3",
    "django-environ>=0.13.0",
    "django-filter>=25.2",
    "django-import-export>=4.4.0",
    "django-mcp>=0.3.1",
    "django-mcp-server>=0.5.7",
    "django-oauth-toolkit>=3.2.0",
    "django-oauth-toolkit-dcr>=0.1.0",
    "django-redis>=6.0.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "factory-boy>=3.3.3",
    "flower>=2.0.1",
    "graphene-django>=3.2.3",
    "gunicorn>=25.1.0",
    "httpx>=0.28.1",
    "markdown>=3.10.2",
    "pandas>=3.0.1",
    "psycopg[binary,pool]>=3.3.3",
    "unidecode>=1.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-aio>=2.1.7",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "pytest-env>=1.6.0",
    "pytest-playwright>=0.7.2",
]
